force-app/main/default/objects/ppmail__Mail_Sending_Batch__c.object
<CustomObject>
    <fields>
        <fullName>ppmail__BCC_Emails__c</fullName>
        <label>BCC Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__BCC_Names__c</fullName>
        <label>BCC Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__CC_Emails__c</fullName>
        <label>CC Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__CC_Names__c</fullName>
        <label>CC Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Mail_Sending__c</fullName>
        <label>Mail Sending</label>
        <referenceTo>ppmail__Mail_Sending__c</referenceTo>
        <relationshipLabel>Mail Sending Batches</relationshipLabel>
        <relationshipName>Mail_Sending_Batches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ppmail__Separate_Email_for_Each_Recipient__c</fullName>
        <formula>ppmail__Mail_Sending__r.ppmail__Separate_Email_for_Each_Recipient__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Separate Email for Each Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ppmail__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>4048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ppmail__Target_IDs__c</fullName>
        <label>Target IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__To_Emails__c</fullName>
        <label>To Emails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__To_Names__c</fullName>
        <label>To Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mail Sending Batch</label>
    <nameField>
        <displayFormat>MSB-{0000000}</displayFormat>
        <label>Mail Sending Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail Sending Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>